gitops/manifests/Archive/speedtest-tracker-old/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: speedtest-tracker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: speedtest-tracker
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  labels:
    io.kompose.service: speedtest
  name: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: speedtest
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      labels:
        io.kompose.service: speedtest
    spec:
      containers:
        - env:
            - name: OOKLA_EULA_GDPR
              value: "true"
            # - name: PGID
            #   value: "1000"
            # - name: PUID
            #   value: "1000"
            # - name: SLACK_WEBHOOK
            #   value: ${SLACK_APP_URL}
            # - name: TZ
            #   value: America/New_York
          image: henrywhitaker3/speedtest-tracker:latest
          name: speedtest
          ports:
            - containerPort: 80
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   failureThreshold: 3
          #   successThreshold: 1
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   failureThreshold: 3
          #   successThreshold: 1
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: speedtest-claim
      restartPolicy: Always
      volumes:
        - name: speedtest-claim
          persistentVolumeClaim:
            claimName: speedtest-claim
status: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-ingress
  namespace: speedtest-tracker
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`speedtest.local.timmybtech.com`) # create A record in pihole
      kind: Rule
      services:
        - name: speedtest
          port: 8765
  tls:
    secretName: local-timmybtech-com-tls # or local-example-com-staging-tls
---
apiVersion: v1
kind: Service
metadata:
  namespace: speedtest-tracker
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
    # metallb.universe.tf/allow-shared-ip: "192.168.86.220"
  labels:
    io.kompose.service: speedtest
  name: speedtest
spec:
  # type: LoadBalancer
  ports:
    - name: http
      port: 8765
      targetPort: 80
  selector:
    io.kompose.service: speedtest
